swagger update and task endpoints
